--- a/css/theme/blood.css
+++ b/css/theme/blood.css
@@ -9,7 +9,7 @@
  * For other themes, change $codeBackground accordingly.
  *
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Cabin|Cagliostro);
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -18,7 +18,7 @@ body {
   background-color: #222; }
 
 .reveal {
-  font-family: Ubuntu, "sans-serif";
+  font-family: Cagliostro, "sans-serif";
   font-size: 36px;
   font-weight: normal;
   color: #eee; }
@@ -44,16 +44,17 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee;
-  font-family: Ubuntu, "sans-serif";
+  font-family: Cabin, "sans-serif";
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: 2px 2px 2px #222;
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 3.77em; 
+  font-family: Cagliostro, "sans-serif";
+}
 
 .reveal h2 {
   font-size: 2.11em; }
